fix: fix alignment in pharma

--- a/src/components/common/Card/CardSection/cardSection.module.css
+++ b/src/components/common/Card/CardSection/cardSection.module.css
@@ -1,4 +1,5 @@
 .paper {
+	--ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 	padding: 34px 24px;
 	width: calc(100% - 12px);
 	height: 100%;
@@ -6,14 +7,59 @@
 	width: 100%;
 	height: 100%;
 
-	&.showHoverShadow {
-		transition: transform 0.2s ease, box-shadow 0.2s ease;
+	transition: transform 0.4s var(--ease-out-expo), box-shadow 0.4s var(--ease-out-expo);
+
+	&:hover{
+		cursor: pointer;
 		
-		&:hover {
-		  box-shadow: 0px 0px 80.7px 0px #0000003B;
-		  transform: translateY(-4px);
+		&.showHoverShadow {
+			  box-shadow: 0px 0px 80.7px 0px #0000003B;
+			  transform: translateY(-4px);
 		}
+
+		.anchortext::after {
+			transform: scaleX(0);
+			transition-delay: 0s;
+		  }
 	}
+
+	.anchorWrapper{
+		display: flex;
+		align-items: center;
+	    gap: 4px;
+		font-family: Lato;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 600;
+		text-decoration: none;
+		
+		.anchortext{
+			position: relative;
+			color: var(--mantine-color-anchor);
+	
+			&::after{
+				position: absolute;
+				content: "";
+				left: 0;
+				display: block;
+				width: 100%;
+				height: 2px;
+				background: var(--mantine-color-anchor);
+				transition: 0.4s var(--ease-out-expo);
+				transform-origin: left;
+				transition-delay: 0.25s;
+			  }
+		  }
+
+		  .iconWrapper{
+			display: inline-flex;
+			align-items: center;
+
+			svg{
+				color: var(--mantine-color-anchor);
+			}
+		  }
+		}
 
 	@media (min-width: $phil-breakpoint-sm) {
 		padding: 48px 32px;
